--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "react-app-polyfill": "^0.1.3",
     "react-art": "^16.6.x",
     "react-dom": "^16.6.x",
-    "react-native": "0.55.x",
+    "react-native": "^0.61.4",
     "react-native-web": "^0.10.x",
     "react-router-dom": "^5.0.0",
     "react-router-native": "^5.0.0"
@@ -75,7 +75,7 @@
     "terser-webpack-plugin": "1.1.0",
     "url-loader": "1.1.1",
     "webpack": "4.19.1",
-    "webpack-dev-server": "3.1.9",
+    "webpack-dev-server": "^3.9.0",
     "webpack-manifest-plugin": "2.0.4",
     "workbox-webpack-plugin": "3.6.3"
   },
